--- a/style.css
+++ b/style.css
@@ -66,6 +66,8 @@ textarea{
   border-bottom-right-radius: 15px;
   background-color: #06AED5;
   color: white;
+  width: 100%;
+  height: 100%;
  
 }
 
